# Robotics

module1/ex01/: commands.txt
module2/ex02/: list_exec_action_tutorials.txt
module2/ex03/peshkov_mikhail/: CMakeLists.txt  package.xml
module2/ex03/peshkov_mikhail/src/: node.cpp
module2/ex04/: colcon_build.txt
module2/ex05/: rosnode_info.txt  rosnode_list.txt
module2/ex06/: cmd_vel.txt
module2/ex08/: rqt_console.txt  three_turtles.launch
module2/ex09/names/: package.xml
module2/ex09/names/msg/: FullNameMessage.msg
module2/ex10/: CMakeLists.txt  package.xml
module2/ex10/src/: main.cpp
module3/ex01/names/: CMakeLists.txt  package.xml
module3/ex01/names/srv/: FullNameSumService.srv
module3/ex01/service_full_name/: CMakeLists.txt  package.xml
module3/ex01/service_full_name/src/: client_name.cpp  service_name.cpp
module3/ex02/action_turtle_commands/: CMakeLists.txt  package.xml
module3/ex02/action_turtle_commands/include/action_turtle_commands/: visibility_control.h
module3/ex02/action_turtle_commands/src/: action_turtle_client.cpp  action_turtle_server.cpp
module3/ex02/turtle_action/: CMakeLists.txt  package.xml
module3/ex02/turtle_action/action/: MessageTurtleCommands.action
module3/ex03/: pose_speed_x1.txt  pose_speed_x1_0.mcap  pose_speed_x2.txt  turtle_cmd_vel_0.mcap
module3/ex04/: doctor.txt
module3/ex05/goal_action/: CMakeLists.txt  package.xml
module3/ex05/goal_action/action/: GoalCoords.action
module3/ex05/move_to_goal/: CMakeLists.txt  package.xml
module3/ex05/move_to_goal/include/move_to_goal/: visibility_control.h
module3/ex05/move_to_goal/src/: move_to_goal_client.cpp  move_to_goal_server.cpp
module4/ex01/: last_transform.txt  transform.txt
module4/ex02/turtles_with_carrot/: CMakeLists.txt  package.xml
module4/ex02/turtles_with_carrot/launch/: turtle_tf2_demo.launch.py  turtle_tf2_fixed_frame_demo.launch.py
module4/ex02/turtles_with_carrot/src/: fixed_frame_broadcast.cpp  listener.cpp
module4/ex03/turtle_time_traveller/: CMakeLists.txt  package.xml
module4/ex03/turtle_time_traveller/launch/: turtle_tf2_demo.launch.py  turtle_tf2_fixed_frame_demo.launch.py
module4/ex03/turtle_time_traveller/src/: fixed_frame_broadcast.cpp  listener.cpp
module5/ex01/: robot.xml
module5/ex02/: robot.urdf.xacro
module5/ex03/ros_gz_example_bringup/config/: ros_gz_example_bridge.yaml  sam_bot_bridge.yaml
module5/ex03/ros_gz_example_bringup/launch/: diff_drive.launch.py  robot_gazebo.launch.py
module5/ex03/ros_gz_example_description/models/sam_bot/: model.config  model.sdf  robot.urdf  robot.xml  sam_bot_description.urdf
module5/ex03/ros_gz_example_gazebo/worlds/: sam_bot.sdf
module5/ex04/ros_gz_example_application/: CMakeLists.txt  package.xml
module5/ex04/ros_gz_example_application/src/: circle.cpp
module5/ex05/ros_gz_example_application/src/: circle.cpp
module5/ex05/ros_gz_example_bringup/config/: sam_bot.rviz
module5/ex05/ros_gz_example_bringup/launch/: robot_gazebo.launch.py
module5/ex05/ros_gz_example_description/models/sam_bot/: model.sdf  robot.urdf
module5/ex05/ros_gz_example_gazebo/worlds/: sam_bot.sdf
module6/all_exercises/ros_gz_example_application/: CMakeLists.txt  depth_follower.cpp  lidar_follower.cpp
module6/all_exercises/ros_gz_example_bringup/config/: robot_lidar.rviz  robot_lidar_bridge.yaml
module6/all_exercises/ros_gz_example_bringup/launch/: robot_lidar.launch.py
module6/all_exercises/ros_gz_example_description/models/robot_lidar/: model.config  model.sdf
module6/all_exercises/ros_gz_example_gazebo/worlds/: robot_lidar.sdf
